[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper"
version = "1.0.0"
description = "A classic Minesweeper game built with Python and Tkinter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["minesweeper", "game", "tkinter", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
minesweeper = "minesweeper.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/minesweeper"
Repository = "https://github.com/yourusername/minesweeper.git"
Issues = "https://github.com/yourusername/minesweeper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["minesweeper*"]
